--- a/Store/app/views/clients/index.html.erb
+++ b/Store/app/views/clients/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= client.name %></td>
         <td><%= client.balance %></td>
-        <td><%= client.type_client_id %></td>
+        <td><%= client.type_client.name %></td>
         <td><%= link_to 'Show', client %></td>
         <td><%= link_to 'Edit', edit_client_path(client) %></td>
         <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
