--- a/Store/app/views/sales/_form.html.erb
+++ b/Store/app/views/sales/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :client_id %><br>
-    <%= f.number_field :client_id %>
+    <%= f.collection_select :client_id, Client.all, :id, :name %>
   </div>
   <div class="field">
     <%= f.label :seller_id %><br>
