--- a/Store/app/views/clients/index.html.erb
+++ b/Store/app/views/clients/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Listing Clients</h1>
 
-<table>
+<table class="pure-table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Balance</th>
       <th>Type client</th>
-      <th colspan="3"></th>
+      <th colspan="3">Options</th>
     </tr>
   </thead>
 
