--- a/Store/app/views/sales/show.html.erb
+++ b/Store/app/views/sales/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Client:</strong>
-  <%= @sale.client_id %>
+  <%= @sale.client.name %>
 </p>
 
 <p>
@@ -20,10 +20,29 @@
   <%= @sale.seller_id %>
 </p>
 
-
 <%= link_to 'Edit', edit_sale_path(@sale) %> |
 <%= link_to 'Back', sales_path %>
 
-<% @sale.products.each do |product| %>
-  <p><%= product.name %></p>
-<% end %>
+<table class="pure-table">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>Name</th>
+      <th>Provider</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sale.products.each do |product| %>
+    <tr>
+      <td><%= product.id %></td>
+      <td><%= product.name %></td>
+      <td><%= product.provider_id %></td>
+      <td><%= link_to 'Show', product %></td>
+      <td><%= link_to 'Edit', edit_product_path(product) %></td>
+      <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+
+    <% end %>
+  </tbody>
+</table>
